[OPIK-6545] Centralize shared logic for dataset item uploads
- Introduced `DatasetItemUploadSupport` class to encapsulate reusable upload logic across JSON and CSV processors.
- Refactored temp-file handling, dataset verification, and status transitions into the new support class.
- Simplified CSV and JSON upload processors by delegating shared responsibilities to `DatasetItemUploadSupport`.
- Enhanced consistency and maintainability across dataset item processing workflows.
- Added test cases for missing dataset validation in CSV and JSON uploads.